--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #eb445a;
-  --ion-color-primary-rgb: 235, 68, 90;
+  --ion-color-primary: #DC0A2C;
+  --ion-color-primary-rgb: 220, 10, 44;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #cf3c4f;
-  --ion-color-primary-tint: #ed576b;
+  --ion-color-primary-shade: #c20927;
+  --ion-color-primary-tint: #e02341;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
