--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Pokedex</ion-title>
+    <ion-title>
+      <img src="./assets/icon/logo.png" style="height: 50px;">
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
